# platformio_rules

./: .gitignore  BUILD  MODULE.bazel  README.md  START_HERE.md  requirements.in  requirements_lock.txt
docs/: BUILD  DEFAULTS_GUIDE.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  RULES_PYTHON_INTEGRATION.md
patches/: 0001-add-bazel.patch
platformio/: BUILD  config.bzl  extension.bzl  pio_wrapper.py  platformio.bzl  platformio_wrapper.py  run_platformio.sh  workspace_defaults.bzl
tests/arduino/: BUILD
tests/binary_counter/: BUILD
tests/binary_counter/button_presses/: BUILD
tests/binary_counter/convert/: BUILD
tests/binary_counter/led_display/: BUILD
tests/binary_counter_espressif8266/: BUILD
tests/blink/: BUILD
tests/esp32_fs/: BUILD
tests/esp32_secure/: BUILD  main.cc
tests/rgb_blink/: BUILD
