module(name = "platformio_rules")

bazel_dep(name = "rules_python", version = "1.8.0-rc4")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "stardoc", version = "0.8.0", repo_name = "io_bazel_stardoc")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Python toolchain and pip dependencies
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "py_deps",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "py_deps")

# External archives
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "com_google_googletest",
    sha256 = "24564e3b712d3eb30ac9a85d92f7d720f60cc0173730ac166f27dda7fed76cb2",
    strip_prefix = "googletest-release-1.12.1",
    urls = ["https://github.com/google/googletest/archive/release-1.12.1.zip"],
)

http_archive(
    name = "io_bazel_rules_sass",
    sha256 = "05db38271919d3d209a9f58db412a5bf2af2def7d4c1fae17b401dccbad97178",
    strip_prefix = "rules_sass-1.57.0",
    url = "https://github.com/bazelbuild/rules_sass/archive/1.57.0.zip",
)
