module(name = "platformio_rules")

bazel_dep(name = "rules_python", version = "1.8.0-rc4")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "stardoc", version = "0.8.0", repo_name = "io_bazel_stardoc")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

# Python toolchain and pip dependencies
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "py_deps",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "py_deps")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Lightweight ESP32 Arduino Core for IDE support
http_archive(
    name = "platformio_framework_esp32",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
cc_library(
    name = "headers",
    hdrs = glob([
        "cores/esp32/**/*.h",
        "cores/esp32/**/*.hpp",
        "variants/esp32/**/*.h",
        "libraries/**/*.h",
        "libraries/**/*.hpp",
    ]),
    srcs = glob([
        "cores/esp32/**/*.cpp",
        "cores/esp32/**/*.c",
        "variants/esp32/**/*.cpp",
        "variants/esp32/**/*.c",
        "libraries/**/*.c",
        "libraries/**/*.cpp",
    ]),
    includes = [
        "cores/esp32",
        "variants/esp32",
    ],
    defines = [
        "ESP32",
        "ARDUINO=10812",
        "ARDUINO_ESP32_DEV",
        "ARDUINO_ARCH_ESP32",
    ],
)
""",
    integrity = "sha256-KU51T463ov0Ls4sIv8hzjhK0ZVBVrEUp2MV6wiCFZCw=",
    strip_prefix = "esp32-3.3.5",
    urls = ["https://github.com/espressif/arduino-esp32/releases/download/3.3.5/esp32-3.3.5.zip"],
)

http_archive(
    name = "com_google_googletest",
    sha256 = "24564e3b712d3eb30ac9a85d92f7d720f60cc0173730ac166f27dda7fed76cb2",
    strip_prefix = "googletest-release-1.12.1",
    urls = ["https://github.com/google/googletest/archive/release-1.12.1.zip"],
)

http_archive(
    name = "io_bazel_rules_sass",
    sha256 = "05db38271919d3d209a9f58db412a5bf2af2def7d4c1fae17b401dccbad97178",
    strip_prefix = "rules_sass-1.57.0",
    url = "https://github.com/bazelbuild/rules_sass/archive/1.57.0.zip",
)
